--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <title>Django Gils Blog</title>
 </head>
+
 <body>
-    <div><h1> <u> <a href=""> Django Gils Blog </a> </u> </h1> </div>
-    {% for post in posts %}
-        <div>
-            <p> publisched: {{ post.published_date }}</p>
-            <h1> <a href=""> {{ post.title }}</a> </h1>
-            <p>{{ post.text|linebreaks }}</p>
-        </div>
-    {% endfor %}
+
+    <div class="page-header"> <h1> <a href=""> Django Gils Blog </a> </h1> </div>
+
+
+    {% block content %}
+        {% for post in posts %}
+            <div class="post">
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+                <h1> <a href="{%url 'post_detail' pk=post.pk %}"> {{ post.title }}</a> </h1>
+                <p>{{ post.text|linebreaks }}</p>
+            </div>
+        {% endfor %}
+    {% endblock %}
+
 </body>
+
 <footer> <a href="http://tutorial.djangogirls.org/en/html/index.html" > Django Tutorial</a>
+
 <a href="http://baku.inf-d.de/ws14_ssd_7/"> html CSS </a> </footer>
 
 </html>
+
