--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,15 @@
 body {
     padding-left: 15px;
+
 }
 
+h1 {
+    color: #70982C;
+    }
 
 h1 a {
     color: #70982C;
-    font-family: 'Lobster';
+    font-family:palatino linotype, palatino;
 }
 
 
@@ -29,7 +33,7 @@ h1 a {
 
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family:palatino linotype, palatino;
 }
 
 
@@ -64,5 +68,4 @@ h1, h2, h3, h4 {
 
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
 }
