--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-
 {% extends 'blog/base.html' %}
 
-<html lang="en">
 
-<head>
-
-    <meta charset="UTF-8">
-    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-
-    <title>Title</title>
-
-</head>
-
-<body>
     {% block content %}
     <div class="post">
         {% if post.published_date %}
@@ -24,11 +8,8 @@
                 {{ post.published_date }}
             </div>
         {% endif %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <h1>{{ post.title }}</h1>
         <p>{{ post.text|linebreaks }}</p>
     </div>
 {% endblock %}
-
-</body>
-
-</html>
